[metadata]
name = checksfinance-soulmoment
version = attr: checksfinance-soulmoment.__version__
description = An implementation of Soul-bound token in Cairo.
author = GUO Yu
author_email = contact@checks.finance
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ChecksFinance/soul-moment
platforms = any
classifiers =
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata>=4.0

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
soulmoment = "*.cairo"

[options.extras_require]
testing =
    setuptools
    tox
    pytest